Second update package.json

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     ]
   },
   "engines": {
-    "npm": ">=7.0.0",
-    "node": ">=16.0.0"
+    "npm": "^7.0.0",
+    "node": "^16.0.0"
   },
   "browserslist": {
     "production": [
